[package]
name = "fdahm"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
keyring = "0.9"
num-format = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serenity = "0.9.0-rc.2"
tokio = "0.2.22"
toml = "0.5"
